--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,3 +3,9 @@
   margin-top: 51px;
   font-family: 'Inter', 'Arial', sans-serif;
 }
+
+@media screen and (max-width: 583px) {
+  .elements {
+    margin-top: 36px;
+  }
+}
