--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,3 +4,11 @@
   line-height: 29px;
   margin-bottom: 20px;
 }
+
+@media screen and (max-width: 583px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 45px;
+  }
+}
