--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,9 @@
   font-size: 18px;
   line-height: 22px;
 }
+
+@media screen and (max-width: 880px) {
+  .footer__copyright {
+    margin-left: 19px;
+  }
+}
