--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,10 @@
  width: 100%;
  border-bottom: 1px solid #545454;
 }
+
+@media screen and (max-width: 880px) {
+    .header {
+        padding-top: 28px;
+        min-height: 56px;
+    }
+}
