--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -16,3 +16,10 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 583px) {
+  .popup__container {
+    width: 282px;
+    padding: 25px 0;
+  }
+}
