--- a/blocks/profile-info/__name/profile-info__name.css
+++ b/blocks/profile-info/__name/profile-info__name.css
@@ -4,3 +4,18 @@
   line-height: 48px;
   margin: 0;
 }
+
+@media screen and (min-width: 584px) and (max-width: 880px) {
+ .profile-info__name {
+  font-size: 28px;
+  line-height: 32px;
+ }
+}
+
+@media screen and (max-width: 583px) {
+  .profile-info__name {
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+  }
+}
