--- a/blocks/profile-info/__title/profile-info__title.css
+++ b/blocks/profile-info/__title/profile-info__title.css
@@ -4,3 +4,13 @@
   line-height: 22px;
   margin: 16px 0 0;
 }
+
+@media screen and (max-width: 583px) {
+  .profile-info__title {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 14px 0 0;
+    text-align: center;
+  }
+}
