--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,3 +10,10 @@
 .profile__add-button:hover {
   opacity: 0.6;   
 }
+
+@media screen and (max-width: 583px) {
+  .profile__add-button {
+    margin: 36px auto 0;
+    width: 282px;
+  }
+}
