hotfix: after review

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,12 +1,13 @@
 .header__logo {
   width: 142px;
   height: 33px;
+  margin-bottom: 41px;
 }
 
 @media screen and (max-width: 880px) {
   .header__logo {
     width: 103.74px;
     height: 24.4px;
-    margin-left: 27px;
+    margin: 0 0 31.6px 27px;
   }
 }
