--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,11 @@
 .header {
  padding-top: 45px;
- min-height: 74px;
  width: 100%;
- border-bottom: 1px solid #545454;
+ border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 880px) {
     .header {
         padding-top: 28px;
-        min-height: 56px;
     }
 }
