--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,11 +8,15 @@
   border: none;
 }
 
+.popup__close:hover {
+  transition: opacity 0.5s linear;
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 583px) {
   .popup__close {
     width: 26px;
     height: 26px;
-    top: -40px;
     right: -0.4px;
   }
 }
