--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -6,5 +6,6 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   min-height: 27px;
   margin-top: 30px;
-  padding-bottom: 13px;
+  padding: 0 0 13px 0;
+  box-sizing: border-box;
 }
