--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,7 +2,8 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin-bottom: 20px;
+  margin: 0 0 24px 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 583px) {
