--- a/blocks/profile-info/__name/profile-info__name.css
+++ b/blocks/profile-info/__name/profile-info__name.css
@@ -1,8 +1,12 @@
 .profile-info__name {
+  max-width: 294px;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 584px) and (max-width: 880px) {
