--- a/blocks/profile-info/__title/profile-info__title.css
+++ b/blocks/profile-info/__title/profile-info__title.css
@@ -3,11 +3,13 @@
   font-size: 18px;
   line-height: 22px;
   margin: 16px 0 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 583px) {
   .profile-info__title {
-    font-weight: normal;
     font-size: 14px;
     line-height: 17px;
     margin: 14px 0 0;
