--- a/blocks/profile-info/profile-info.css
+++ b/blocks/profile-info/profile-info.css
@@ -1,5 +1,12 @@
 .profile-info {
+  max-width: calc(100% - 127.5px - 150px);
   display: flex;
   flex-direction: column;
   margin: auto 0;
+}
+
+@media screen and (max-width: 583px) {
+  .profile-info {
+    max-width: calc(100% - 19px*2);
+  }
 }
