--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,13 +1,14 @@
 .profile__add-button {
-  border: 1px solid #FFFFFF;
+  border: 2px solid #FFFFFF;
   background-color: inherit;
   margin: auto 0 auto auto;
   background: url(../../../images/add-button-plus.svg) no-repeat center;
-  width: 150px;
+  min-width: 150px;
   height: 50px;
 }
 
 .profile__add-button:hover {
+  transition: opacity 0.5s linear;
   opacity: 0.6;   
 }
 
