--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,19 +2,20 @@
   border: 1px solid #FFFFFF;
   background-color: inherit;
   background: url(../../../images/profile-info-pencil.svg) no-repeat center;
-  width: 24px;
+  min-width: 24px;
   height: 24px;
   margin-left: 18px;
   align-self: center;
 }
 
 .profile__edit-button:hover {
+  transition: opacity 0.5s linear;
   opacity: 0.6;
 }
 
 @media screen and (max-width: 583px) {
   .profile__edit-button {
-    width: 18px;
+    min-width: 18px;
     height: 18px;
     margin-left: 10px;
   }
