--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,10 +10,10 @@
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  position: fixed;
+  position: relative;
 }
 
-@media screen and (max-width: 583px) {
+@media screen and (max-width: 593px) {
   .popup__container {
     width: 282px;
     padding: 25px 0;
