--- a/blocks/profile-info/profile-info.css
+++ b/blocks/profile-info/profile-info.css
@@ -5,8 +5,8 @@
   margin: auto 0;
 }
 
-@media screen and (max-width: 583px) {
+@media screen and (max-width: 593px) {
   .profile-info {
-    max-width: calc(100% - 19px*2);
+    max-width: 282px;
   }
 }
