--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,7 +12,13 @@
   opacity: 0.6;   
 }
 
-@media screen and (max-width: 583px) {
+@media screen and (min-width: 593px) and (max-width: 890px) {
+  .profile__add-button {
+    min-width: 120px;
+  }
+}
+
+@media screen and (max-width: 593px) {
   .profile__add-button {
     margin: 36px auto 0;
     width: 282px;
