--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
   background: url(../../../images/profile-info-pencil.svg) no-repeat center;
   min-width: 24px;
   height: 24px;
-  margin-left: 18px;
+  margin: 0 10px 0 18px;
   align-self: center;
 }
 
@@ -13,10 +13,10 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 583px) {
+@media screen and (max-width: 593px) {
   .profile__edit-button {
     min-width: 18px;
     height: 18px;
-    margin-left: 10px;
+    margin: 0 10px;
   }
 }
