feat: cards from massive

--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,5 +1,6 @@
 .cards__image {
-    max-width: 282px;
+    width: 282px;
     height: 282px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
