--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url(../blocks/cards/__rectangle/cards__rectangle.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__like/_active/cards__like_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
