feat: image popup

--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,6 @@
 @import url(../blocks/popup/__button-save/popup__button-save.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 
+@import url(../blocks/popup/__image-form/popup__image-form.css);
+@import url(../blocks/popup/__img-name/popup__img-name.css);
+@import url(../blocks/popup/__img/popup__img.css);
