--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,9 +7,10 @@
   bottom: 0;
   right: 0;
   position: fixed;
+  visibility: hidden;
   opacity: 0;
-  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: visibility 0.2s, opacity 0.2s linear;
 }
