hotfix: many little fixes

--- a/blocks/popup/__container-image/popup__container-image.css
+++ b/blocks/popup/__container-image/popup__container-image.css
@@ -1,4 +1,4 @@
-.popup__image-form {
+.popup__container-image {
     font-family: 'Inter', 'Arial', sans-serif;
     padding: 0;
     max-width: 75vw;
