--- a/blocks/cards/__like/_active/cards__like_active.css
+++ b/blocks/cards/__like/_active/cards__like_active.css
@@ -1,3 +1,4 @@
 .cards__like_active {
     background: url(../../../../images/cards-liked.svg) no-repeat center;
+    background-size: contain;
   }
