--- a/blocks/popup/__input-text-error/popup__input-text-error.css
+++ b/blocks/popup/__input-text-error/popup__input-text-error.css
@@ -3,6 +3,6 @@
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-  position: absolute;
-  bottom: -20px;
+  margin-top: 5px;
+  height: 25px;
 }
