--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,7 @@
   width: 120px;
   height: 120px;
   border-radius: 120px;
-  margin-right: 30px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 593px) {
