--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,7 +10,9 @@
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css);
 @import url(../blocks/profile-info/profile-info.css);
 @import url(../blocks/profile-info/__row/profile-info__row.css);
 @import url(../blocks/profile-info/__name/profile-info__name.css);
@@ -25,8 +27,11 @@
 @import url(../blocks/cards/__rectangle/cards__rectangle.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__likes-counter/cards__likes-counter.css);
+@import url(../blocks/cards/__likes/cards__likes.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
 @import url(../blocks/cards/__del/cards__del.css);
+@import url(../blocks/cards/__del/_remove/cards__del_remove.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -38,6 +43,7 @@
 @import url(../blocks/popup/__input-text/popup__input-text.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__button-save/_withoutmargin/popup__button-save_withoutmargin.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 
 @import url(../blocks/popup/__input-text-error/popup__input-text-error.css);
